Se agrega script start faltante

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "devDependencies": {},
     "scripts": {
+        "start": "node .",
         "dev": "nodemon ."
     },
     "repository": {
